--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="index.html">Sobre mim</a>
                 </li>
                 <li>
-                <a href="project.html">Projetos</a>
+                <a href="https://github.com/Biasds" target="_blank" rel="noopener noreferrer">Projetos</a>
                 </li>
                 <li>
                 <a href="contact.html">Contato</a>
@@ -58,17 +58,6 @@
                 </p>
                 <p>
                     - Ensino Médio - E.E. Profa. Alzira Martins Lichti (2015 - 2022)
-                </p>
-            </section>
-            <section>
-                <h3>Cursos</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing 
-                    elit. Etiam eget ligula eu lectus lobortis condimentum.
-                    Aliquam nonummy auctor massa. Pellentesque habitant morbi
-                    tristique senectus et netus et malesuada fames ac turpis
-                    egestas. Nulla at risus. Quisque purus magna, auctor et,
-                    sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing
                 </p>
             </section>
         </main>
