--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 
     <head>
         <meta charset="UTF-8">
@@ -41,7 +41,7 @@
                     <input type="text" id="message" name="message" required>
                 </div>
                 <button type="submit">Send</button>
-                <input type="hidden" name="_next" value="https://biasds.github.io/easy-portfolio/thanks.html">
+                <input type="hidden" name="_next" value="https://biasds.github.io/thanks.html">
                 <input type="hidden" name="_subject" value="New submission!">
             </form>
         </div>
